--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -11,6 +11,10 @@
   animation: intro 0.3s both;
   animation-delay: 0.35s;
 
+  @include breakpoint($large) {
+    max-width: $large;
+  }
+
   @include breakpoint($x-large) {
     max-width: $x-large;
   }
